  This augments the existing "symlinks" and "shebangs" modes already
  supported by the --enable-single-binary option.

  'tail' now accepts the --debug option, which is currently used to
  detail the --follow implementation being used.

  'du' now supports the short option -A corresponding to the existing long
  option --apparent-size, for compatibility with FreeBSD.

** Changes in behavior

  'timeout' now honors ignored signals and will not propagate them.  E.g.,
  timeout(1) in a shell backgrounded job, will not terminate upon receiving
  SIGINT or SIGQUIT, as these are ignored by default in shell background jobs.

  'timeout -v -s 0' now prints the signal number 0 instead of EXIT.

** Improvements

  The multi-call binary built with configure --enable-single-binary
  is reduced in size by 3.2% through the more efficient reuse of the cksum
  utility by the md5sum and sha*sum utilities.

  csplit, ls, and sort, now handle a more complete set of terminating signals.

  'du' now processes directories with 10,000 or more entries up to 9 times
  faster on the Lustre file system.

  'pinky' will now exit immediately upon receiving a write error, which is
  significant when reading large plan or project files.

  'timeout' on Linux will always terminate the child in the case where the
  timeout process itself dies, like when it receives a KILL signal for example.

** Build-related

  'kill' and 'uptime' are no longer built by default.  These programs can be
  built with the --enable-install-program=kill,uptime configure option.


* Noteworthy changes in release 9.9 (2025-11-10) [stable]

** Bug fixes

  `basenc --base58` would not operate correctly with input > 15561475 bytes.
  [bug introduced with --base58 in coreutils-9.8]

  'cksum --check' now supports base64 encoded input in untagged format:
    - for all length adjustable algorithms (blake2b, sha2, sha3),
    - if that base64 input starts with a tag like "SHA1" etc.