@@ -828,4 +828,13 @@ require_gnu_()
     || skip_ 'not running on GNU/Hurd'
 }
 
+# Sequence derived from <https://datatracker.ietf.org/doc/rfc9839>.
+bad_unicode ()
+{
+  require_built_ printf
+
+  # invalid UTF8|unpaired surrogate|C1 control|noncharacter
+  env printf '\xC3|\xED\xBA\xAD|\u0089|\xED\xA6\xBF\xED\xBF\xBF\n'
+}
+
 sanitize_path_
