@@ -84,13 +84,14 @@ fold --characters input3 | tail -n 4 > out3 || fail=1
 compare exp3 out3 || fail=1
 
 # Sequence derived from <https://datatracker.ietf.org/doc/rfc9839>.
-bad_unicode ()
+bad_unicode_with_nul ()
 {
   # invalid UTF8|unpaired surrogate|NUL|C1 control|noncharacter
   env printf '\xC3|\xED\xBA\xAD|\u0000|\u0089|\xED\xA6\xBF\xED\xBF\xBF\n'
 }
-bad_unicode > /dev/null || framework_failure_
-test $({ bad_unicode | fold; bad_unicode; } | uniq | wc -l) = 1 || fail=1
+bad_unicode_with_nul > /dev/null || framework_failure_
+test $({ bad_unicode_with_nul | fold; \
+         bad_unicode_with_nul; } | uniq | wc -l) = 1 || fail=1
 # Check bad character at EOF
 test $(env printf '\xC3' | fold | wc -c) = 1 || fail=1
 
