@@ -27,6 +27,13 @@ my @Tests =
 ["1tok", '-w10', {IN=>"bar\n"},     {OUT=>"        bar\n"}],
 ["2tok", '-w10', {IN=>"foo bar\n"}, {OUT=>"     /   bar\n        foo/\n"}],
 
+# Ensure -w overrides -t
+["width-1", '-t -w10', {IN=>"bar\n"},     {OUT=>" " x  8 . "bar\n"}],
+# Ensure default width is 72
+["width-3", '',        {IN=>"bar\n"},     {OUT=>" " x 39 . "bar\n"}],
+# Ensure default width is 100 with -t
+["width-2", '-t',      {IN=>"bar\n"},     {OUT=>" " x 53 . "bar\n"}],
+
 # with coreutils-6.12 and earlier, this would infloop with -wN, N < 10
 ["narrow", '-w2', {IN=>"qux\n"},    {OUT=>"      qux\n"}],
 ["narrow-g", '-g1 -w2', {IN=>"ta\n"}, {OUT=>"  ta\n"}],
